--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,13 @@ streamlit
 pandas
 plotly
 matplotlib
+folium
+streamlit-folium
+plotly.graph_objects
+seaborn
+scipy
+scikit-learn
+numpy
+altair
+pydeck
 
