--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,115 @@
+# History and temp files
 .history/
 
-# IDE Configuration files/directories
-.vscode
-.idea
-.gdb
+# IDE Configuration files/directories  
+.vscode/
+.idea/
+.gdb/
 
-*.zip
-.ipynb_checkpoints
-*.csv
-*.svg
-*.png
+# Temporary and backup files
 *.swp
-*.xlsx
-*.xml
-*.pdf
-*.txt
-*.prj
-*.docx
-*.aprx
-*.atbx
-*.pyc
 *.bak
-*.xml
+*.tmp
+*~
+
+# Compressed files (unless specific to project)
+*.zip
+*.tar.gz
+*.rar
+
+# Jupyter notebooks checkpoints
+.ipynb_checkpoints/
+
+# Images (uncomment if you have many large images to exclude)
+# *.png
+# *.jpg
+# *.svg
+
+# Documents that might be large or personal
+# *.pdf
+# *.docx
+
+# GIS and specialized files (uncomment if not needed for project)
+# *.prj
+# *.aprx  
+# *.atbx
 
 # LaTeX side-effect files
 *.aux
 *.log
 *.out
 
-# not include output of scripts after running
+# Python runtime files
 *.pyc
 __pycache__/
+.pytest_cache/
+*.pyo
+*.pyd
+
+# Virtual environments
+venv/
+env/
+.venv/
+.env/
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
 # Private presentation and personal notes
 PRESENTATION_HIGHLIGHTS.md
 *_NOTES.md
 *_PERSONAL.md
+notes/
+personal/
 
-# Test files and development artifacts
+# Development and test files
 test_dashboard.py
 *_test.py
 *_backup.py
+experiments/
 
 # Runtime and cache files
 *.log
 .streamlit/
-__pycache__/
-.pytest_cache/
+logs/
 
 # Environment and configuration
 .env
 .env.local
+.env.production
 config_personal.py
+secrets.toml
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Security and sensitive files
+*.key
+*.pem
+*.p12
+*.p8
+*.cer
+*.crt
+*.der
+secrets/
