--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.8"
 license = {text = "MIT"}
 authors = [
-    {name = "Megh KC", email = "megh.kc@example.com"},
+    {name = "Megh KC", email = "kc.megh2048@gmail.com"},
 ]
 keywords = ["freight", "analytics", "dashboard", "visualization", "streamlit", "logistics"]
 classifiers = [
